feat(api): add get lease endpoint
